tests/negative/typecheck/select-not-exist.orng
fn main() -> Int {
    let x: (a: Int, b: Int) = (3, 4)
    x.c
    0
}